--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/material": "^5.14.9",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.9",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
